19990924-07:18 GMT+1 Victor Szel <info@szelvesz.hu>

  * source/hbpp/hbpp.c
    ! Fixed warning about function not returning value (in ParseDefine())
  * source/rtl/classes.c
    + hb_clsDictRealloc() implemented.
      By Janica Lubos <janica@fornax.elf.stuba.sk>

19990923-20:55 EDT Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gt/gtwin.c
    * fix for redirected console output as reported by Victor

19990923-23:42 GMT+3 Alexander Kresin
  * source/hbpp/hbpp.c
    * Fixed bugs, noted by Antonio Linares and Matteo Baccan

19990923-13:58 GMT+3 Alexander Kresin
  * source/hbpp/hbpp.c
    * Fixed a bug with clauses definition order.
      Now we can write
        use ... alias ... new shared
          or
        use ... shared new alias ... , etc.

19990923-11:40 GMT+1 Victor Szel <info@szelvesz.hu>

  * source/rtl/extend.c
    ! Fixed hb_stor*() functions to handle arrays with the -1 parameter like
      in CA-Clipper. Thanks to Janica Lubos <janica@fornax.elf.stuba.sk>

19990923-10:55 GMT+1 Victor Szel <info@szelvesz.hu>

  * include/gtapi.h
    include/set.h
    include/Makefile
    include/setcurs.ch
  + include/setcurs.h (new)
    ! Cursor style constants moved to a separate file setcurs.h, this new
      file is included to gtapi.h and set.h. The .ch file is no longer used
      from C code. Previously the constants defined in setcurs.ch and set.h
      collided, and could not compile.

  * include/set.h
    include/inkey.h
    source/rtl/inkey.c
    * HB_inkey_enum moved to inkey.h from set.h.

19990923-09:16 GMT+1 Victor Szel <info@szelvesz.hu>

  * include/vm.api
    ! Removed HANDLE typedef, since it conflicted with the one in clipdefs.h,
      it's also more Clipper compatible now.

19990923-03:30 GMT+1 Victor Szel <info@szelvesz.hu>

  * source/rtl/gt/gtwin.c
    ! Tab removed from the top of the file.
  * source/rtl/console.c
    ! Small fix in the function header of HB_OSNewLine().

19990923-00:30 GMT+1 Victor Szel <info@szelvesz.hu>
